--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -182,6 +182,7 @@ body {
     position: relative;
   }
   .topnav.responsive .icon {
+    padding-top: 9px ;
     position: absolute;
     right: 0;
     top: 0;
@@ -189,7 +190,7 @@ body {
   .topnav.responsive a {
     float: none;
     display: block;
-    text-align: left;
+    text-align: center;
   }
   .topnav.responsive .dropdown {
     float: none;
